[gd_scene load_steps=3 format=3 uid="uid://057e2gs21f3f"]

[ext_resource type="Script" uid="uid://btx50fs7kdtg3" path="res://scripts/ui/MainMenu.gd" id="1_vjtqc"]

[sub_resource type="LabelSettings" id="LabelSettings_0rmrm"]
font_size = 80
font_color = Color(0.417886, 0.834855, 1, 1)
outline_size = 11
outline_color = Color(3.83542e-08, 0.0487224, 0.0190055, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjtqc")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.776471, 0.52549, 0.905882, 0.447059)

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 100.0
offset_right = 195.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "游戏Demo"
label_settings = SubResource("LabelSettings_0rmrm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "开始游戏"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "设     置"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "退出游戏"
